@@ -1,4 +1,13 @@
-﻿shmuel 27.10.2014 16:31:01 +0200 - build 439
+﻿shmuel 29.10.2014 01:04:04 +0200 - build 440
+
+1. При многократной перезагрузке макросов (far.MacroLoadAll) среднее время перезагрузки устойчиво
+   возрастало. Заметил, что для проявления этого нежелательного эффекта необходимы два фактора:
+       а) перезагрузка библиотеки MoonScript
+       б) хотя бы один вызов pcall(require,"inexistent") при загрузке какого-либо макрофайла
+   Эффект убран прекращением перезагрузки библиотеки MoonScript при перезагрузке макросов.
+   Механизм данного эффекта мне на данный момент не ясен.
+
+shmuel 27.10.2014 16:31:01 +0200 - build 439
 
 1. LuaFAR (generic plugin): рефакторинг.
 
